Bug 48155 use relative resource: urls when registering chrome; r=sgehani, r/sr=scc, a=pdt [rtm++]